--- a/WebContent/OlaMundo.xhtml
+++ b/WebContent/OlaMundo.xhtml
@@ -6,11 +6,16 @@
 	  
 	  <h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-		<title>Ola Mundo</title>
+		<title>Hello World</title>
 	   </h:head>
 		
-	   <h:body>
-		 <h:inputText value="Digite algo aqui" />
-		 <h:commandButton2 value="Clique Aqui"/>
-	   </h:body>
+		<h:body>
+			<h:form>
+		   		Seu Nome:
+			 	<h:inputText value="#{olaMundoBean.name}" />
+			 	<h:commandButton value="Clique Aqui"/>
+			</h:form>
+			<br/>
+			Nome digitado: #{olaMundoBean.name}
+		</h:body>
 </html>                   
